fix collapse menus in smphone screen

--- a/src/documents/css/styles.css.less
+++ b/src/documents/css/styles.css.less
@@ -44,7 +44,6 @@ a {
 #navigation {
   background-color: @clear-color;
   margin-bottom: 0;
-  color: rgba(255, 255, 255, 0.8);
   .box-shadow(rgba(27, 27, 27, 0.4) 1px 1px 10px);
   border: 0px none;
   overflow: hidden;
@@ -52,11 +51,14 @@ a {
     padding-left: 0;
     padding-right: 0;
   }
+  a {
+    color: @base-color;
+  }
   .nav > li {
     text-align: center;
   }
   .nav > li.active > a {
-    color: @accent-color !important;
+    color: @base-color !important;
   }
   .nav > li > a:hover, 
   .nav > li > a:focus {
