--- a/src/documents/css/top.css.less
+++ b/src/documents/css/top.css.less
@@ -14,6 +14,11 @@
     margin: 20px;
     text-align: center;
     font-size: 30px;
+    .btn {
+      display: inline-block;
+      min-width: 200px;
+      margin: 5px 10px;
+    }
   }
   .version {
     text-align: center;
